CREATE TABLE marketing_campaigns (
  id              uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  user_id         uuid NOT NULL,
  organization_id uuid REFERENCES organizations(id) ON DELETE CASCADE,
  title           text NOT NULL,
  content         text,
  platforms       text[],
  status          text DEFAULT 'draft',
  platform_data   jsonb,
  scheduled_date  timestamptz,
  created_at      timestamptz DEFAULT now()
);

CREATE INDEX idx_campaigns_org ON marketing_campaigns(organization_id);

CREATE TABLE whatsapp_outbox (
  id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  organization_id uuid REFERENCES organizations(id) ON DELETE CASCADE,
  campaign_id     uuid REFERENCES marketing_campaigns(id) ON DELETE CASCADE,
  phone           text NOT NULL,
  message         text,
  status          text DEFAULT 'scheduling',
  media_urls      text[],
  metadata        jsonb DEFAULT '{}',
  response_data   jsonb,
  created_at      timestamptz NOT NULL DEFAULT timezone('utc', now()),
  updated_at      timestamptz NOT NULL DEFAULT timezone('utc', now())
);

CREATE INDEX idx_whatsapp_outbox_campaign_id ON whatsapp_outbox(campaign_id);

CREATE TABLE messenger_outbox (
  id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  organization_id uuid NOT NULL REFERENCES organizations(id) ON DELETE CASCADE,
  psid            text NOT NULL,
  message         text NOT NULL,
  status          text DEFAULT 'scheduling',
  media_urls      text[] DEFAULT '{}',
  response_data   jsonb,
  created_at      timestamptz NOT NULL DEFAULT timezone('utc', now()),
  updated_at      timestamptz NOT NULL DEFAULT timezone('utc', now())
);

CREATE TABLE social_posts (
  id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  organization_id uuid NOT NULL REFERENCES organizations(id) ON DELETE CASCADE,
  campaign_id     uuid REFERENCES marketing_campaigns(id) ON DELETE CASCADE,
  content         text,
  platforms       text[],
  media_urls      text[],
  status          text DEFAULT 'scheduling',
  response_data   jsonb,
  created_at      timestamptz DEFAULT now(),
  updated_at      timestamptz DEFAULT now()
);

CREATE INDEX idx_social_posts_org         ON social_posts(organization_id);
CREATE INDEX idx_social_posts_campaign_id ON social_posts(campaign_id);
